@@ -1,3 +1,9 @@
+2007-02-06  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/ttk.tcl: Add no-op [package ifneeded] script
+	for tile 0.8.0, so that existing applications that use
+	"package require tile" won't fail when run under Tk 8.5.
+
 2007-02-04  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/tcl.m4: use gcc4's __attribute__((__visibility__("hidden"))) if
